# flocode-041-strings

./: .gitignore  README.md  borehole_data.xlsx  bridge_example.py  clean_up.py  cleaned_borehole_data.xlsx  pyproject.toml  requirements.txt  strings_tutorial.ipynb
data/: cleaned_borehole_data.xlsx
src/: clean_up.py  strings_tutorial.ipynb
